[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Items/Checkpoints/End/End (Idle).png" type="Texture" id=1]
[ext_resource path="res://Scripts/goal.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sounds/level_completed.wav" type="AudioStream" id=3]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.666667, 0.991228 )
colors = PoolColorArray( 0.0424232, 0.71602, 0.987305, 1, 0.0287018, 0.0649103, 0.667969, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.51227 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, 98, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.1
angular_velocity = 100.0
angular_velocity_random = 0.2
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 30.0
angle_random = 0.5
scale = 3.0
scale_curve = SubResource( 5 )
color = Color( 0.027451, 0.686275, 0.917647, 1 )
color_ramp = SubResource( 3 )
hue_variation = 0.8
hue_variation_random = 1.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17, 16 )

[node name="goal" type="Area2D"]
collision_layer = 16
script = ExtResource( 2 )

[node name="confetti" type="Particles2D" parent="."]
position = Vector2( 0, -45 )
emitting = false
amount = 24
explosiveness = 0.6
randomness = 0.2
process_material = SubResource( 6 )

[node name="texture" type="Sprite" parent="."]
position = Vector2( 0, -32 )
texture = ExtResource( 1 )

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -16 )
shape = SubResource( 1 )

[node name="victoryFx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -15.0

[connection signal="body_entered" from="." to="." method="_on_goal_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_goal_body_exited"]
